--- a/.env
+++ b/.env
@@ -1,2 +1,21 @@
-node_modules
 
+# Node.js environment
+NODE_ENV=production
+
+# Application port
+PORT=1337
+
+# Custom environment variables
+MY_ENV_VARIABLE=my_value
+ANOTHER_ENV_VARIABLE=another_value
+
+# Database configuration (example)
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=myuser
+DB_PASSWORD=mypassword
+DB_NAME=mydatabase
+
+# API keys (example)
+API_KEY=myapikey
+SECRET_KEY=mysecretkey
