--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,16 @@
+
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./webserver.js", "use":"@vercel/node"
-      }
+    "version":2,
+    "builds":[
+        {
+            "src":"./hngwebserver.js",
+            "use":"@vercel/node"
+        }
     ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ],
-    "env": {
-      "NODE_ENV": "production",
-      "MY_ENV_VARIABLE": "value"
-    }
-  }
-  
+    "routes":[
+        {
+            "src":"/(.*)",
+            "dest":"/"
+        }
+    ]
+}
